--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "sass-resources-loader": "^2.2.4",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "wangeditor": "^4.7.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
