--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "font-awesome": "^4.7.0",
+    "highlight.js": "^11.2.0",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
