--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "sass-resources-loader": "^2.2.4",
+    "shine": "^0.1.1",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
